# invyra-forecasting

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  TEMP_TEST_CREATE_DELETE.txt  TREE_TEST.txt  TREE_TEST_10.txt  TREE_TEST_2.txt  TREE_TEST_3.txt  TREE_TEST_4.txt  TREE_TEST_5.txt  TREE_TEST_6.txt  TREE_TEST_7.txt  TREE_TEST_8.txt  TREE_TEST_9.txt  pyproject.toml  render.yaml  requirements.txt
docs/: 00_PROJECT_CHARTER.md  01_ARCHITECTURE.md  02_DATA_CONTRACTS.md  03_FORECAST_TYPES.md  04_GOVERNANCE_RULES.md  05_INTEGRATION_MAP.md  06_ROADMAP.md  07_API_CONTRACTS.md  08_INTEGRATION_FIXTURES.md  09_SNAPSHOT_AND_AUDIT_PERSISTENCE.md  10_FORECAST_ACCURACY.md  11_CONFIDENCE_RECALIBRATION.md  12_REPORTING_EXPORTS.md  13_INTEGRATION_CONTRACTS.md  14_PHASE1_ACCEPTANCE_CHECKLIST.md  15_KNOWN_LIMITATIONS.md  16_INTEGRATION_READINESS_MATRIX.md  17_PHASE2_CARRYOVER_SCOPE.md  18_PHASE2A_INVENTORY_ADAPTER_MAPPING.md  19_PHASE2B_ITEM_DETAILS_BOUNDARY.md  20_PHASE2C_ITEM_DETAILS_API.md  21_PHASE2D_API_EXAMPLES_AND_FIXTURES.md  22_PHASE2E_ITEM_DETAILS_VIEW_MODEL.md  23_PHASE2F_UI_WIRING_PLAN_AND_GUARDS.md  24_PHASE2K_API_RUNTIME_CONNECTIVITY.md  25_PHASE2O_HOSTED_API_DEPLOYMENT_READINESS.md  26_PHASE2P_HTTPS_DEPLOYMENT_PACKAGE.md  27_PHASE2Q_LIVE_ENDPOINT_VERIFICATION.md  28_PHASE2Q_RENDER_DEPLOYMENT_PREP.md  PROGRAM_B_TENANT_ISOLATION_CERTIFICATION.md  PROGRAM_C3_HISTORICAL_SNAPSHOT_INDEX.md  PROGRAM_C7_FILE_BACKED_EXPLAINABILITY.md  PROGRAM_C8_DURABLE_HISTORY_READ_PROVIDER.md  PROGRAM_C9_READ_ONLY_HISTORY_API.md  (+62 more)
(+407 files in other folders)
