[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invyra-forecasting"
version = "0.1.0"
description = "Python-first explainable forecasting engine for Invyra."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Invyra" }]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.115.0", "uvicorn>=0.30.0"]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
